5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1649_869.log
== TEST (2019-04-05 18:29:36) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:29:44) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- EXECUTION TIME:
0.151889
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
175.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
175.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:29:49) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:30:15) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:30:19) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- EXECUTION TIME:
0.183264
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
175.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
175.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:30:39) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 0.05
if valor_da_brusinha >= 200:
	print(valor_da_brusinha * desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
10.0045
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:30:48) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 0.5
if valor_da_brusinha >= 200:
	print(valor_da_brusinha * desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
100.045
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:31:09) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 0,5
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(valor_da_brusinha - desconto)
TypeError: unsupported operand type(s) for -: 'float' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:31:18) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = .5
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
199.59
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:31:23) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = .5
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
199.59
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:31:38) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 0.05
if valor_da_brusinha >= 200:
	print(valor_da_brusinha * desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
10.0045
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:32:15) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:32:19) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(valor_da_brusinha - desconto)
else: 
	print("sem descontoooo")




-- EXECUTION TIME:
0.268057
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
175.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
175.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:32:33) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2)
else: 
	print("sem descontoooo")




-- ERROR:
File "XXXX", line 6
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:32:53) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:32:57) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:32:59) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- EXECUTION TIME:
0.172091
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
175.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
175.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:33:04) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:33:07) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- EXECUTION TIME:
0.168972
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
175.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
175.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:33:20) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 18:33:25) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- EXECUTION TIME:
0.197075
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
175.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
175.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 18:33:27) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = 25
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- OUTPUT:
175.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:56:44) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = valor_da_brusinha*10/100
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- OUTPUT:
180.08
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:57:08) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = valor_da_brusinha*5/100
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 21:57:13) 
-- CODE:
#que desconto mixuruca
valor_da_brusinha = float(input("digite o golpe: "))
desconto = valor_da_brusinha*5/100
if valor_da_brusinha >= 200:
	print(round(valor_da_brusinha - desconto, 2))
else: 
	print("sem descontoooo")




-- EXECUTION TIME:
0.180741
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
